fixed up the sidebar; reduced zindex (site under overlays), fixed y scroll, fixed top alignment

--- a/sites/all/modules/custom/dmge_system/sass/screen.sass
+++ b/sites/all/modules/custom/dmge_system/sass/screen.sass
@@ -202,9 +202,9 @@ output
   position: fixed
   min-width: 300px
   background: white
-  overflow-y: scroll
   overflow: hidden
-  z-index: 1000
+  overflow-y: scroll
+  z-index: 420
   height: 100%
   &.active
     display: block
@@ -215,8 +215,7 @@ output
 
 #sidebar_tray
   position: fixed
-
-  bottom: 0
+  top: 0
   text-align: center
   button, input[type="button"]
     display: inline-block
